<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/AppNameTitleTheme"
        android:text="@string/sign_in"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_login_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/login"
        android:textColor="@color/blue"
        android:textColorHint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_login_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_title" />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/blue"
        app:layout_constraintEnd_toEndOf="@+id/et_login_username"
        app:layout_constraintStart_toStartOf="@+id/et_login_username"
        app:layout_constraintTop_toBottomOf="@+id/et_login_username"
        />

    <Button
        android:id="@+id/btn_login_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/connect"
        app:cornerRadius="0dp"
        android:backgroundTint="@color/blue"
        android:textStyle=""
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_login_noAccount"
        app:layout_constraintEnd_toEndOf="@+id/et_login_password"
        app:layout_constraintStart_toStartOf="@+id/et_login_password" />

    <TextView
        android:id="@+id/tv_login_noAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account_create_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_login_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login_login"
        app:layout_constraintTop_toBottomOf="@+id/et_login_password" />
</androidx.constraintlayout.widget.ConstraintLayout>