<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterFragment" >

    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_account"
        android:theme="@style/AppNameTitleTheme"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_register_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:ems="10"
        android:hint="@string/login"
        android:layout_marginBottom="15dp"
        android:inputType="text"
        android:theme="@style/EditTextStyle"
        app:layout_constraintBottom_toTopOf="@id/et_register_password"
        app:layout_constraintEnd_toEndOf="@+id/tv_register_title"
        app:layout_constraintStart_toStartOf="@+id/tv_register_title" />

    <EditText
        android:id="@+id/et_register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:theme="@style/EditTextStyle"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/et_register_confirmPassword"
        app:layout_constraintEnd_toEndOf="@+id/et_register_login"
        app:layout_constraintStart_toStartOf="@+id/et_register_login" />

    <EditText
        android:id="@+id/et_register_confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:theme="@style/EditTextStyle"
        app:layout_constraintBottom_toTopOf="@id/btn_register_register"
        app:layout_constraintEnd_toEndOf="@+id/et_register_password"
        app:layout_constraintStart_toStartOf="@+id/et_register_password"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_title" />

    <Button
        android:id="@+id/btn_register_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:theme="@style/ButtonStyle"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_register_confirmPassword"
        app:layout_constraintStart_toStartOf="@+id/et_register_confirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/et_register_confirmPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>